Lau 264 reenable fortify (#66)
* LAU-264: Update to re-enable fortify.

* LAU-264: Update to re-enable fortify.